--- a/Desafios/d0011/estilo/style.css
+++ b/Desafios/d0011/estilo/style.css
@@ -58,6 +58,10 @@ section {
     font-size: 3.5vw;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 section.normal {
     background-color: white;
     color: black;
@@ -72,6 +76,14 @@ section.imagem > p {
     display: inline-block;
     background-color: black;
     padding: 10px;
+}
+
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
 }
 
 footer {
